[project]
name = "as7343"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.11.0",
    "numpy>=2.5.1",
    "pandas>=3.0.3",
    "seaborn>=0.13.2",
]
[tool.uv]
index-url = "https://pypi.tuna.tsinghua.edu.cn/simple"
